--- a/templates/about.html
+++ b/templates/about.html
@@ -3,35 +3,72 @@
 {% block content %}
 <html >
 <head>
-	<link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-    />
-	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-
+  />
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+    rel="stylesheet"
+  />
 </head>
 <body>
-	<div class="countainer-fluid">
+	<div class="flex">
 		
-		<section class="about mb-80 p-50 bgcolor-2 border-rounded">
-			<div class="about-header flex-center">
+		<section class=" mt-3">
+			<div class="mt-2">
 				<i class="fas fa-users fa-2x"></i>
-				<h2>About Us</h2>
+				<span class="h2 m-2">About Us<span>
 			</div>
+            <hr>
 			<div >
-				<p class="mb-40">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempor id eu nisl nunc mi. Fringilla ut morbi tincidunt augue. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Nunc consequat interdum varius sit amet mattis. Elementum integer enim neque volutpat ac. Orci a scelerisque purus semper eget. Scelerisque in dictum non consectetur a erat nam at lectus. Sed felis eget velit aliquet sagittis id consectetur purus ut. Arcu dictum varius duis at consectetur lorem donec massa.
-
+				<p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. Tempor id eu nisl nunc mi. Fringilla ut 
+                    morbi tincidunt augue. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. 
+                    Nunc consequat interdum varius sit amet mattis. <br>Elementum integer enim neque volutpat ac. 
+                    Orci a scelerisque purus semper eget. Scelerisque in dictum non consectetur a erat nam at lectus. 
+                    Sed felis eget velit aliquet sagittis id consectetur purus ut. 
+                    Arcu dictum varius duis at consectetur lorem donec massa.
                     Rhoncus mattis rhoncus urna neque. Libero id faucibus nisl tincidunt eget nullam non nisi.
                     <br>
-                     Nec feugiat nisl pretium fusce id velit. Quis risus sed vulputate odio ut enim blandit volutpat. Id porta nibh venenatis cras. Non diam phasellus vestibulum lorem sed risus ultricies tristique. Nec feugiat nisl pretium fusce id velit ut tortor pretium. Tempor orci dapibus ultrices in iaculis. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt vitae. Mauris vitae ultricies leo integer malesuada nunc vel risus commodo. Morbi tincidunt augue interdum velit euismod. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius.
+                     Nec feugiat nisl pretium fusce id velit. Quis risus sed vulputate odio ut enim blandit volutpat. 
+                     Id porta nibh venenatis cras. Non diam phasellus vestibulum lorem sed risus ultricies tristique. 
+                     Nec feugiat nisl pretium fusce id velit ut tortor pretium. Tempor orci dapibus ultrices in iaculis. 
+                     Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Faucibus pulvinar elementum 
+                     integer enim neque volutpat ac tincidunt vitae. Mauris vitae ultricies leo integer malesuada nunc vel risus 
+                     commodo. Morbi tincidunt augue interdum velit euismod. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius.
+                    Dictum sit amet justo donec enim diam vulputate ut. Lacus sed viverra tellus in hac.<br> 
+                    Aliquet risus feugiat in ante metus dictum at tempor. Hendrerit dolor magna eget est lorem ipsum. 
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada. Enim nunc faucibus a pellentesque 
+                    sit amet porttitor eget. Maecenas ultricies mi eget mauris pharetra et. Arcu non odio euismod lacinia at 
+                    quis risus sed. Curabitur gravida arcu ac tortor. Ac turpis egestas integer eget aliquet nibh. Non pulvinar 
+                    neque laoreet suspendisse interdum. Integer vitae justo eget magna fermentum iaculis eu non. Dolor sit amet 
+                    consectetur adipiscing elit.<br>
                     
-                    Dictum sit amet justo donec enim diam vulputate ut. Lacus sed viverra tellus in hac.<br> Aliquet risus feugiat in ante metus dictum at tempor. Hendrerit dolor magna eget est lorem ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada. Enim nunc faucibus a pellentesque sit amet porttitor eget. Maecenas ultricies mi eget mauris pharetra et. Arcu non odio euismod lacinia at quis risus sed. Curabitur gravida arcu ac tortor. Ac turpis egestas integer eget aliquet nibh. Non pulvinar neque laoreet suspendisse interdum. Integer vitae justo eget magna fermentum iaculis eu non. Dolor sit amet consectetur adipiscing elit.
-                    
-                    Lectus urna duis convallis convallis tellus id interdum velit. Aliquet porttitor lacus luctus accumsan tortor posuere ac. Porta nibh venenatis cras sed felis. Risus viverra adipiscing at in tellus integer. Est ullamcorper eget nulla facilisi. Dolor magna eget est lorem ipsum dolor. Eget est lorem ipsum dolor sit amet consectetur. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Ut placerat orci nulla pellentesque dignissim enim sit amet venenatis. Amet consectetur adipiscing elit duis tristique. Malesuada proin libero nunc consequat interdum. Aliquet porttitor lacus luctus accumsan tortor posuere. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Sodales neque sodales ut etiam sit amet nisl purus. Convallis posuere morbi leo urna molestie at elementum. Sit amet nisl purus in mollis nunc sed id semper. Vitae aliquet nec ullamcorper sit amet. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Amet massa vitae tortor condimentum.
-                    
-                    Euismod in pellentesque massa placerat duis ultricies. Eu feugiat pretium nibh ipsum consequat.<br> Feugiat vivamus at augue eget arcu. Diam volutpat commodo sed egestas egestas fringilla. Non consectetur a erat nam at lectus urna. Amet nulla facilisi morbi tempus. Dapibus ultrices in iaculis nunc sed. Pellentesque sit amet porttitor eget dolor morbi non. Metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. Nisi lacus sed viverra tellus in hac habitasse platea dictumst. A arcu cursus vitae congue mauris. Massa eget egestas purus viverra accumsan in nisl nisi. In hac habitasse platea dictumst quisque sagittis. Pulvinar elementum integer enim neque. Placerat duis ultricies lacus sed turpis tincidunt id aliquet risus.
+                    Lectus urna duis convallis convallis tellus id interdum velit. Aliquet porttitor lacus luctus accumsan tortor 
+                    posuere ac. Porta nibh venenatis cras sed felis. Risus viverra adipiscing at in tellus integer. Est ullamcorper 
+                    eget nulla facilisi. Dolor magna eget est lorem ipsum dolor. Eget est lorem ipsum dolor sit amet consectetur.
+                    <br>
+                    Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Ut placerat orci nulla pellentesque dignissim 
+                    enim sit amet venenatis. Amet consectetur adipiscing elit duis tristique. Malesuada proin libero nunc consequat 
+                    interdum. 
+                    <br>Aliquet porttitor lacus luctus accumsan tortor posuere. Condimentum vitae sapien pellentesque 
+                    habitant morbi tristique senectus et. Sodales neque sodales ut etiam sit amet nisl purus. 
+                    Convallis posuere morbi leo urna molestie at elementum. Sit amet nisl purus in mollis nunc sed id semper. 
+                    Vitae aliquet nec ullamcorper sit amet. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. 
+                    Amet massa vitae tortor condimentum.
+                    Euismod in pellentesque massa placerat duis ultricies. Eu feugiat pretium nibh ipsum consequat.<br> 
+                    Feugiat vivamus at augue eget arcu. Diam volutpat commodo sed egestas egestas fringilla. Non consectetur a 
+                    erat nam at lectus urna. Amet nulla facilisi morbi tempus. Dapibus ultrices in iaculis nunc sed. 
+                    Pellentesque sit amet porttitor eget dolor morbi non. Metus aliquam eleifend mi in nulla posuere 
+                    sollicitudin aliquam ultrices. Nisi lacus sed viverra tellus in hac habitasse platea dictumst. 
+                    A arcu cursus vitae congue mauris. Massa eget egestas purus viverra accumsan in nisl nisi. <br>
+                    In hac habitasse platea dictumst quisque sagittis. Pulvinar elementum integer enim neque. 
+                    Placerat duis ultricies lacus sed turpis tincidunt id aliquet risus.
                 </p>
 				
 			</div>
