--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -8,10 +8,16 @@
 
 <head>
     <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-        crossorigin="anonymous"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+          rel="stylesheet"
+        />
+        <link
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+          rel="stylesheet"
+        />
+        <link
+          href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+          rel="stylesheet"
         />
 </head>
 
@@ -21,18 +27,39 @@
         
         
         <div class="container">
-            <h2 class="text-center text-uppercase text-primary">Admin panel</h2>
+            <div class="text-center mt-3">
+                <i class="fas fa-screwdriver-wrench fa-2x"></i>
+                <span class="h2 m-2 text-center 
+                text-uppercase ">Admin panel<span>
+              </div>
             <hr>
             <div class="row">
                 <div class="row justify-content-center">
-                    <a class="btn btn-primary w-25 p-5 m-3 " href="{% url 'productlist' %}">products</a>
-                    <a class="btn btn-primary w-25 p-5 m-3" href="{% url 'producttypelist' %}">products Types</a>
-                    <a class="btn btn-primary w-25 p-5 m-3" href="{% url 'admstocklist' %}">Stocks</a>
-                    <a class="btn btn-primary w-25 p-5 m-3" href="{% url 'unitlist' %}">Units</a>
-                    <a class="btn btn-primary w-25 p-5 m-3" href="{% url 'citylist' %}">cities</a>
-                    <a class="btn btn-primary w-25 p-5 m-3" href="{% url 'inventorylist' %}">inventories</a>
-                    <a class="btn btn-primary w-25 p-5 m-3" href="{% url 'supplierlist' %}">suppliers</a >
-                    <a class="btn btn-primary w-25 p-5 m-3" href="{% url 'admorderlist' %}">Orders</a>
+                   
+                    <a class="btn btn-outline-primary text-center p-5 m-3" 
+                        style="width: 250px; maxheight:350px;" 
+                        href="{% url 'productlist' %}">products</a>
+                    <a class="btn btn-outline-primary text-center p-5 m-3" 
+                        style="width: 250px; maxheight:350px;" 
+                        href="{% url 'producttypelist' %}">products Types</a>
+                    <a class="btn btn-outline-primary text-center p-5 m-3" 
+                        style="width: 250px; maxheight:350px;" 
+                        href="{% url 'admstocklist' %}">Stocks</a>
+                    <a class="btn btn-outline-primary text-center p-5 m-3" 
+                        style="width: 250px; maxheight:350px;" 
+                        href="{% url 'unitlist' %}">Units</a>
+                    <a class="btn btn-outline-primary text-center p-5 m-3" 
+                        style="width: 250px; maxheight:350px;" 
+                        href="{% url 'citylist' %}">cities</a>
+                    <a class="btn btn-outline-primary text-center p-5 m-3" 
+                        style="width: 250px; maxheight:350px;" 
+                        href="{% url 'inventorylist' %}">inventories</a>
+                    <a class="btn btn-outline-primary text-center p-5 m-3" 
+                        style="width: 250px; maxheight:350px;" 
+                        href="{% url 'supplierlist' %}">suppliers</a >
+                    <a class="btn btn-outline-primary text-center p-5 m-3" 
+                        style="width: 250px; maxheight:350px;" 
+                        href="{% url 'admorderlist' %}">Orders</a>
                 </div>
             </div>
             
