--- a/templates/citydel.html
+++ b/templates/citydel.html
@@ -6,12 +6,18 @@
 <html>
 
 <head>
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-    />
+  <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+  rel="stylesheet"
+/>
 </head>
 
 <body>
@@ -27,10 +33,10 @@
                   {{ form | crispy }}
                   <h5 class="text-dark m-5">Are you sure you want to delete {{object.name}} city?</h5>
                   
-                  <input type="submit"class="btn  btn-danger w-25 m-2 " value="Confirm">
+                  <input type="submit"class="btn  btn-danger m-2 " value="Confirm">
                   <a
                               href="{% url 'citylist' %}"
-                                class="btn  btn-primary w-25 m-2 "
+                                class="btn  btn-primary  m-2 "
                                 role="btn"
                                 >Cancel</a
                               >
