--- a/templates/orderfailure.html
+++ b/templates/orderfailure.html
@@ -6,18 +6,25 @@
 
 <head>
   <link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
   rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-  crossorigin="anonymous"
-  />
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+  rel="stylesheet"
+/>
 </head>
 
 <body>
 
     <div class="container-fluid">
       <div class="row">
-        <h1 class="text-center text-bold text-danger">Order Failed To Submit!</h1>
+        <h1 class="text-center text-bold text-danger mt-4">Order Failed To Submit!</h1>
+        <hr>
         <p class="text-center mt-3">Requested amount was more than stocks.</p>
         <a href="{% url 'shop' %}" class="alert alert-primary text-center" role="btn">Try Again</a>
     </div>
