--- a/templates/orderlist.html
+++ b/templates/orderlist.html
@@ -6,46 +6,44 @@
 <html>
 
 <head>
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-    />
+  <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+  rel="stylesheet"
+/>
 </head>
 
 <body>
 
-    <section class="container-fluid ">
+    <div >
+      <div class="mt-3">
+        <i class="fas fa-boxes-stacked fa-2x"></i>
+        <span class="h2 m-2">Your Orders:<span>
+          <hr>
+        </div>
         <div class="row">
-          <h2 class=" text-left mt-3 pt-3">Orders:</h2>
-          <div class="row row-cols-4 row-cols-md-4 g-4 px-3">
+          <div class="row justify-content-center">
             {% for item in object_list %}
-            <div class="col">
-              <div class="card h-100">
+            <div class="btn border-secondary p-4 m-4 align-center text-center  bg-white rounded " 
+            style="width: 250px; ">
+              <div>
                 <div class="card-body">
                   <h3 class="text-center ">{{ item.product.product.name }}</h3>
-                  <p class=" text-center ">ordered {{ item.quantity }} {{item.product.product.unit.name}}{% if item.quantity != 1 %}s
+                  <p class=" text-center m-1 ">ordered {{ item.quantity }} {{item.product.product.unit.name}}{% if item.quantity != 1 %}s
                     {% endif %}
                 </p>
                 
-                <p class="card-text {% if item.status == 'submitted' %} text-primary {% else %} text-success {% endif %} text-center">
+                <p class="card-text m-1 {% if item.status == 'submitted' %} text-primary {% else %} text-success {% endif %} text-center">
                     Status: {{item.status}}
                 </p>
-                  {% comment %} <p class="card-text text-center">
-                    <a
-                      href="{% url 'ordersubmit' pk=item.pk%}"
-                      class="btn btn-primary mt-3 w-30"
-                      role="btn"
-                      >Edit</a
-                    >
-                    <a
-                      href="{% url 'ordersubmit' pk=item.pk%}"
-                      class="btn btn-danger mt-3 w-30"
-                      role="btn"
-                      >Delete</a
-                    >
-                  </p> {% endcomment %}
+                  
                 </div>
               </div>
             </div>
@@ -53,7 +51,7 @@
             {% endfor %}
           </div>
         </div>
-      </section>
+      </div>
 
 </body>
 
