--- a/templates/ordersubmit.html
+++ b/templates/ordersubmit.html
@@ -6,11 +6,17 @@
 
 <head>
   <link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-  crossorigin="anonymous"
-  />
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+          rel="stylesheet"
+        />
+        <link
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+          rel="stylesheet"
+        />
+        <link
+          href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+          rel="stylesheet"
+        />
 </head>
 
 <body>
@@ -27,8 +33,11 @@
         <div class="container-fluid">
           <div class="card text-center h-100">
             <div class="card-body" >
-              <h2 class="text-primary">Submit Order:</h2>
-              <hr>
+              <div class="mt-3">
+                <i class="fas fa-check fa-2x"></i>
+                <span class="h2 m-2">Place Your Order:<span>
+                  <hr>
+                </div>
               <h5 class="text-dark">{{ Stock }}</h5>
               <form action="" method="post">
                     {% csrf_token %}
@@ -36,7 +45,7 @@
                     <label class="label">Quantity:</label>
                     <input name="quantity" type="number" value="1" class="input w-10 mt-2" />
                     <br>
-                    <input type="submit" href="{% url 'ordersubmit' pk=Stock.pk %}" class="btn  btn-success w-25 mt-2 " value="SUBMIT">
+                    <input type="submit" href="{% url 'ordersubmit' pk=Stock.pk %}" class="btn  btn-success mt-2 " value="SUBMIT">
               </form>
           </div>
             
