--- a/templates/ordersuccess.html
+++ b/templates/ordersuccess.html
@@ -6,18 +6,25 @@
 
 <head>
   <link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
   rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-  crossorigin="anonymous"
-  />
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+  rel="stylesheet"
+/>
 </head>
 
 <body>
   
     <div class="container-fluid">
       <div class="row">
-        <h1 class="text-center text-bold text-success">Order Submitted!</h1>
+        <h1 class="text-center text-bold text-success mt-4">Order Submitted!</h1>
+        <hr>
         <p class="text-center mt-3">You can check on your order from <a href="{% url 'orderlist' pk=user.pk %}">Orders</a> tab.</p>
         <a href="{% url 'shop' %}" class=" text-center alert alert-primary" role="btn">Go back to HomePage</a>
     </div>
