--- a/templates/productlist.html
+++ b/templates/productlist.html
@@ -6,18 +6,25 @@
 <html>
 
 <head>
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-    />
+  <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+  rel="stylesheet"
+/>
 </head>
 
 <body>
 
     <div class="wrapper">
         <h1 class=" text-left mt-3 mb-3 ml-0 align-left w-50">Products:</h1>
+        <hr>
         <a
             href="{% url 'productadd' %}"
             class="btn btn-success align-right"
@@ -25,7 +32,6 @@
             >+ Add product</a
             >
         
-      <hr>
         <div class="wrapper">
             <table class="table table-striped">
                 <thead class="thead-dark ">
