--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,11 +3,31 @@
 
 {% block content %}
 
-<form method="post">
-{% csrf_token %}{{form|crispy}}
-<p>Don't have an account? <a href='{% url 'signup' %}'>Create here</a></p>
-<button type="submit" class="btn btn-success">Submit</button>
-</form>
-
+<head>
+    <link
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+          rel="stylesheet"
+        />
+        <link
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+          rel="stylesheet"
+        />
+        <link
+          href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+          rel="stylesheet"
+        />
+</head>
+<body>
+    <div class="mt-3">
+        <i class="fas fa-right-to-bracket fa-2x"></i>
+        <span class="h2 m-2">Login<span>
+          <hr>
+    </div>
+    <form method="post">
+        {% csrf_token %}{{form|crispy}}
+        <p class="text-dark">Don't have an account? <a href='{% url 'signup' %}'>Create here</a></p>
+        <button type="submit" class="btn btn-success">Login</button>
+    </form>
+</body>
 {% endblock content %}
 
