--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -2,11 +2,33 @@
 {% load crispy_forms_tags %}
 {% load static %} 
 {% block content %}
+
+<head>
+  <link
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        rel="stylesheet"
+      />
+      <link
+        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+        rel="stylesheet"
+      />
+      <link
+        href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+        rel="stylesheet"
+      />
+</head>
+<body>
   <div >
-    <h2>Sign Up</h2>
+    <div class="mt-3">
+      <i class="fas fa-user-plus fa-2x"></i>
+      <span class="h2 m-2">Sign Up<span>
+    </div>
+    <hr>
     <form method="post">
       {% csrf_token %} {{form|crispy}}
       <button type="submit" class="btn btn-success">Sign Up</button>
     </form>
   </div>
+</body>
+  
 {% endblock content %}
