--- a/templates/shop.html
+++ b/templates/shop.html
@@ -7,36 +7,91 @@
 
 <html>
     <head>
-        <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-        crossorigin="anonymous"
-        />
+        
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+    rel="stylesheet"
+   />
     </head>
 
 <body>
 
     <section class="container-fluid mb-3">
-        <div class="container">
-          <h2 class=" text-left m-3 p-3">Products:</h2>
-          <div class="row row-cols-5 row-cols-md-4 g-4 px-3">
+        <div class="container-fluid">
+          <h1  class=" text-success text-center text-uppercase m-3 p-3">
+            Welcome to my Online Shop!</h1>
+
+            <div>
+              <div id="carouselMaterialStyle" class="carousel slide carousel-fade" data-mdb-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide-to="0" class="active" 
+                  aria-current="true"
+                    aria-label="Slide 1"></button>
+                  <button type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide-to="3" aria-label="Slide 4"></button>
+                </div>
+              
+                <div class="carousel-inner rounded-5 shadow-4-strong">
+                  <div class="carousel-item active">
+                    <img src="https://images.pexels.com/photos/1295572/pexels-photo-1295572.jpeg?auto=compress&cs=tinysrgb&w=1000" 
+                    class="d-block w-100"
+                    
+                      alt="nuts" />
+                  </div>
+              
+                  <div class="carousel-item">
+                    <img src="https://images.pexels.com/photos/135755/pexels-photo-135755.jpeg?auto=compress&cs=tinysrgb&w=1000" 
+                    class="d-block w-100"
+                      alt="nuts2" />
+                  </div>
+              
+                  <div class="carousel-item">
+                    <img src="https://images.pexels.com/photos/2161650/pexels-photo-2161650.jpeg?auto=compress&cs=tinysrgb&w=1000" 
+                    class="d-block w-100"
+                      alt="nuts3" />
+                  </div>
+
+                  <div class="carousel-item">
+                    <img src="https://images.pexels.com/photos/3969097/pexels-photo-3969097.jpeg?auto=compress&cs=tinysrgb&w=1000" 
+                    class="d-block w-100"
+                      alt="nuts3" />
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </div>
+
+
+          <div class="mt-3">
+            <i class="fas fa-bars-staggered fa-2x"></i>
+            <span class="h2 m-2">My Products:<span>
+              <hr>
+            </div>
+          <div class="row justify-content-center ">
             {% for item in object_list%}
-            <div class="col">
-              <div class="card h-100">
-                <div class="card-body">
-                  <h3 class="card-title text-center">{{ item.name }}</h3>
+            <div class="btn m-4 align-center
+             text-center p-4 bg-white rounded " 
+            style="width: 250px;">
+            
+                <div class="card-body align-center ">
+                  <h3 class="card-title align-center text-center">{{ item.name }}</h3>
                   <p class="card-text text-center">
                     <a
                       href="{% url 'stocklist' pk=item.pk%}"
-                      class="btn btn-primary mt-3 w-50 align-bottom"
+                      class="btn btn-info mt-5 w-50 align-bottom"
                       role="btn"
-                      >More</a
-                    >
+                      >More</a>
                   </p>
                 </div>
               </div>
-            </div>
       
             {% endfor %}
           </div>
