--- a/templates/stocklist.html
+++ b/templates/stocklist.html
@@ -6,35 +6,51 @@
 <html>
 
 <head>
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-    />
+  <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+  rel="stylesheet"
+/>
 </head>
 
 <body>
 
-    <section class="container-fluid m-3">
+    <section class="flex m-3">
         <div class="row">
-          <h2 class=" text-left mt-3 pt-3">Stocks:</h2>
-          <div class="row row-cols-4 row-cols-md-4 g-4 px-3">
+          <div class="mt-3">
+            <i class="fas fa-boxes-stacked fa-2x"></i>
+            <span class="h2 m-2">Available Stocks:<span>
+            </div>
+            <hr>
+          <div class="row justify-content-center">
+            
             {% for item in object_list %}
-            <div class="col">
-              <div class="card h-100">
+            
+            <div class="btn border-secondary p-4 m-4 align-center text-center  bg-white rounded " 
+            style="width: 250px; ">
+              <div>
                 <div class="card-body">
-                  <h3 class="card-title text-center text-capitalize">{{ item.product.name }}</h3>
-                  <p class="card-title text-center ">Stock: {{ item.quantity }}</p>
+                  <h3 class=" text-center">{{ item.product.name }}</h3>
+                  <p class="card-title text-center mt-4 ">Stock: {{ item.quantity }}</p>
                   <p class="card-text text-center">
                     {% if item.quantity > 0 %}
-                    <a
+                    <div class="align-self-end mt-4">
+
+                      <a
                       href="{% url 'ordersubmit' pk=item.pk%}"
-                      class="btn btn-success mt-4 w-100 align-bottom"
+                      class="btn align-self-end btn-success  w-100
                       role="btn"
                       >Order</a
-                    >
-
+                      >
+                      
+                    </div>
                     {% else %}
 
                     <p class="text text-danger">
